# xcore-metrics-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
ops/grafana/dashboards/: xcore-overview.json
ops/grafana/provisioning/dashboards/: default.yml
ops/prometheus/: prometheus.yml
ops/systemd/: install.sh  xcore-metrics-gateway.service
src/xcore_metrics_gateway/: discovery.py  guard.py  http.py  main.py  poller.py  prometheus.py  redis_client.py  runtime.py  self_metrics.py  settings.py  snapshot.py  store.py
tests/: test_guard.py  test_http.py  test_prometheus.py  test_redis_flow.py  test_runtime_health.py  test_settings.py  test_snapshot.py  test_store.py
tests/fixtures/: plugin-snapshot-contract.json
